新增调试日志

--- a/docs/0-服务器启动文档.md
+++ b/docs/0-服务器启动文档.md
@@ -148,6 +148,25 @@ ON DUPLICATE KEY UPDATE
 | manager-web    | 控制台输出，或 `ps -ef      | grep "npm run serve"`                |
 | xiaozhi-server | `/tmp/xiaozhi-server.log` | `pkill -f "xiaozhi-server/app.py"` |
 
+常用调试指令：
+
+```bash
+# 查看最近日志
+tail -n 200 /tmp/xiaozhi-server.log
+
+# 实时跟踪日志
+tail -f /tmp/xiaozhi-server.log
+
+# 确认本地 Ollama 模型列表
+OLLAMA_HOST=127.0.0.1:11434 ollama list
+
+# 测试 Ollama 模型一句话
+OLLAMA_HOST=127.0.0.1:11434 ollama run qwen2.5:1.5b "你好，介绍一下你自己"
+
+# 检查服务进程
+ps -ef | grep "python app.py"
+```
+
 ## 7. 常见问题
 
 - **Liquibase 命令报错找不到 `db/changelog/*.sql`**：直接通过 `mvn spring-boot:run` 启动即可自动迁移，不建议单独跑 `mvn liquibase:update`
